deploy/k8s/btcpay/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: btcpay
  labels:
    kubernetes.io/metadata.name: btcpay
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/audit-version: latest
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/warn-version: latest
